--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,7 +99,7 @@ dependencies {
     // Room
     def roomVersion = "2.5.2"
     implementation "androidx.room:room-runtime:$roomVersion"
-    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+//    annotationProcessor "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     ksp "androidx.room:room-compiler:$roomVersion"
 
