--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.ui:ui-tooling'
 //    implementation 'com.google.android.material:material'
     implementation 'androidx.compose.material3:material3'
     testImplementation 'junit:junit:4.13.2'
