--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation 'androidx.compose.material:material:1.5.0'
     implementation 'androidx.compose.material:material-icons-extended:1.5.0'
     implementation 'androidx.compose.ui:ui-text-google-fonts:1.5.0'
+    implementation "io.coil-kt:coil-compose:1.3.2"
 
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.48'
@@ -117,6 +118,19 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:4.16.0"
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.5"
+
+    // Camera
+    def cameraxVersion = "1.2.3"
+    implementation "androidx.camera:camera-view:${cameraxVersion}"
+    implementation "androidx.camera:camera-core:${cameraxVersion}"
+    implementation "androidx.camera:camera-camera2:${cameraxVersion}"
+    implementation "androidx.camera:camera-lifecycle:${cameraxVersion}"
+
+    implementation "androidx.camera:camera-view:${cameraxVersion}"
+    implementation "androidx.camera:camera-extensions:${cameraxVersion}"
+
+    // Permissions
+    implementation "com.google.accompanist:accompanist-permissions:0.18.0"
 }
 
 //kapt {
