--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling'
 //    implementation 'com.google.android.material:material'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -125,6 +127,7 @@ dependencies {
     implementation "androidx.camera:camera-core:${cameraxVersion}"
     implementation "androidx.camera:camera-camera2:${cameraxVersion}"
     implementation "androidx.camera:camera-lifecycle:${cameraxVersion}"
+    implementation "io.github.mr0xf00:easycrop:0.1.1"
 
     implementation "androidx.camera:camera-view:${cameraxVersion}"
     implementation "androidx.camera:camera-extensions:${cameraxVersion}"
