--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,36 +58,38 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
+    def composeVersion = "1.5.3"
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.ui:ui-tooling'
+    implementation "androidx.compose.ui:ui:$composeVersion"
+    implementation "androidx.compose.ui:ui-graphics:$composeVersion"
+    implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
+    implementation "androidx.compose.ui:ui-tooling:$composeVersion"
 //    implementation 'com.google.android.material:material'
-    implementation 'androidx.compose.material3:material3'
-    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation "androidx.compose.material3:material3:1.1.2"
+    implementation "androidx.recyclerview:recyclerview:1.3.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0-alpha01"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$composeVersion"
+    debugImplementation "androidx.compose.ui:ui-tooling:$composeVersion"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$composeVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0-alpha02"
     ksp 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0'
 
     // Composable
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
-    implementation 'androidx.compose.runtime:runtime-livedata:1.5.0'
-    implementation 'androidx.compose.runtime:runtime:1.5.0'
-    implementation 'androidx.compose.material:material:1.5.0'
-    implementation 'androidx.compose.material:material-icons-extended:1.5.0'
-    implementation 'androidx.compose.ui:ui-text-google-fonts:1.5.0'
+    def composableVersion = "1.5.2"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
+    implementation "androidx.compose.runtime:runtime-livedata:1.5.2"
+    implementation "androidx.compose.runtime:runtime:$composableVersion"
+    implementation "androidx.compose.material:material:$composableVersion"
+    implementation "androidx.compose.material:material-icons-extended:$composableVersion"
+    implementation "androidx.compose.ui:ui-text-google-fonts:$composableVersion"
     implementation "io.coil-kt:coil-compose:1.3.2"
 
     // Hilt
@@ -115,7 +117,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.7.1"
+    implementation "androidx.navigation:navigation-compose:2.7.3"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.16.0"
