--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.8.0'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation "androidx.compose.ui:ui:$composeVersion"
     implementation "androidx.compose.ui:ui-graphics:$composeVersion"
@@ -85,7 +85,7 @@ dependencies {
     // Composable
     def composableVersion = "1.5.2"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
-    implementation "androidx.compose.runtime:runtime-livedata:1.5.2"
+    implementation "androidx.compose.runtime:runtime-livedata:1.5.3"
     implementation "androidx.compose.runtime:runtime:$composableVersion"
     implementation "androidx.compose.material:material:$composableVersion"
     implementation "androidx.compose.material:material-icons-extended:$composableVersion"
@@ -94,7 +94,7 @@ dependencies {
 
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.48'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-beta01'
 //    kapt("com.google.dagger:hilt-android-compiler:2.48")
 //    ksp("com.google.dagger:dagger-compiler:2.48")
     ksp 'com.google.dagger:hilt-compiler:2.48'
@@ -117,7 +117,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.7.3"
+    implementation "androidx.navigation:navigation-compose:2.7.4"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.16.0"
