--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$composableVersion"
     implementation "androidx.compose.ui:ui-text-google-fonts:$composableVersion"
     implementation "io.coil-kt:coil-compose:1.3.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
 
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.48'
