--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,19 +58,19 @@ android {
 }
 
 dependencies {
-    def composeVersion = "1.5.3"
-    implementation 'androidx.core:core-ktx:1.12.0'
+    def composeVersion = "1.6.7"
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.activity:activity-compose:1.8.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.0'
+    implementation 'androidx.activity:activity-compose:1.9.0'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation "androidx.compose.ui:ui:$composeVersion"
     implementation "androidx.compose.ui:ui-graphics:$composeVersion"
     implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
     implementation "androidx.compose.ui:ui-tooling:$composeVersion"
 //    implementation 'com.google.android.material:material'
-    implementation "androidx.compose.material3:material3:1.1.2"
-    implementation "androidx.recyclerview:recyclerview:1.3.1"
+    implementation "androidx.compose.material3:material3:1.2.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -79,23 +79,22 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$composeVersion"
     debugImplementation "androidx.compose.ui:ui-tooling:$composeVersion"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$composeVersion"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.0"
     ksp 'org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.6.0'
 
     // Composable
-    def composableVersion = "1.5.2"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
-    implementation "androidx.compose.runtime:runtime-livedata:1.5.3"
-    implementation "androidx.compose.runtime:runtime:$composableVersion"
-    implementation "androidx.compose.material:material:$composableVersion"
-    implementation "androidx.compose.material:material-icons-extended:$composableVersion"
-    implementation "androidx.compose.ui:ui-text-google-fonts:$composableVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$composeVersion"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.7"
+    implementation "androidx.compose.runtime:runtime:$composeVersion"
+    implementation "androidx.compose.material:material:$composeVersion"
+    implementation "androidx.compose.material:material-icons-extended:$composeVersion"
+    implementation "androidx.compose.ui:ui-text-google-fonts:$composeVersion"
     implementation "io.coil-kt:coil-compose:1.3.2"
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.8.0"
 
     // Hilt
-    implementation 'com.google.dagger:hilt-android:2.48'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-beta01'
+    implementation 'com.google.dagger:hilt-android:2.49'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 //    kapt("com.google.dagger:hilt-android-compiler:2.48")
 //    ksp("com.google.dagger:dagger-compiler:2.48")
     ksp 'com.google.dagger:hilt-compiler:2.48'
@@ -104,28 +103,28 @@ dependencies {
 //    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
 
     // Room
-    def roomVersion = "2.5.2"
+    def roomVersion = "2.6.1"
     implementation "androidx.room:room-runtime:$roomVersion"
 //    annotationProcessor "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     ksp "androidx.room:room-compiler:$roomVersion"
 
     // Work
-    def work_version = "2.8.1"
+    def work_version = "2.9.0"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // GSon
     implementation 'com.google.code.gson:gson:2.10.1'
 
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.7.4"
+    implementation "androidx.navigation:navigation-compose:2.7.7"
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.16.0"
     implementation "com.github.bumptech.glide:compose:1.0.0-alpha.5"
 
     // Camera
-    def cameraxVersion = "1.2.3"
+    def cameraxVersion = "1.3.3"
     implementation "androidx.camera:camera-view:${cameraxVersion}"
     implementation "androidx.camera:camera-core:${cameraxVersion}"
     implementation "androidx.camera:camera-camera2:${cameraxVersion}"
